# chuchi-rs

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yaml
chuchi/: Cargo.toml  README.md
chuchi-codegen/: Cargo.toml
chuchi-codegen/src/: api.rs  api_stream.rs  request_extractor.rs  resource.rs  route.rs  util.rs  ws.rs
chuchi-core/: Cargo.toml  README.md
chuchi-core/src/: lib.rs
chuchi-core/src/body/: body_http.rs  mod.rs
chuchi-core/src/header/: url.rs
chuchi-core/src/request/: builder.rs
chuchi-ssr/: Cargo.toml
chuchi-ssr/examples/example_ssr/: main.rs
chuchi-ssr/examples/example_ssr/public/: index.html
chuchi-ssr/examples/example_ssr/public/js/: server.js
chuchi-ssr/js/: ext_entry.js  main.js
chuchi-ssr/src/: lib.rs  pool.rs  runtime.rs
chuchi/examples/: catcher.rs  cors.rs  hello_world.rs  post.rs  read_json.rs  static_files.rs  with_file.rs  write_json.rs
chuchi/src/: error.rs  lib.rs  resources.rs  routing.rs  server.rs
chuchi/src/api/: error.rs  mod.rs  request.rs  response.rs  testing.rs  util.rs
chuchi/src/api/stream/: server.rs  stream.rs  streamer.rs  util.rs
chuchi/src/extractor/: mod.rs
chuchi/src/fs/: caching.rs  memory_files.rs  mod.rs  static_files.rs
chuchi/src/graphql/: mod.rs
chuchi/src/routes/: path_params.rs  router.rs
chuchi/src/util/: header.rs  mod.rs
chuchi/src/ws/: util.rs
chuchi/tests/: api_basic.rs  api_stream.rs  default_features.rs  fs.rs  json.rs  util.rs  ws.rs
